# financials

./: .flake8  .gitignore  pyproject.toml  runme.ps1
src/: __init__.py  __main__.py  database_handler.py  root_router.py  utils.py
src/bank_data/: hdfc_parser.py  icici_parser.py
src/bank_parser/: hdfc_parser.py  icici_parser.py
src/db/: __init__.py  mongo_connector.py
src/mappers/zepto/: mapper.py  order_parser.py
src/mappers/zomato/: mapper.py
src/service/: const.py  data_ingestion.py  transactions.py  vendor.py
src/static/: cards.js  styles.css  toggle.js
src/templates/: LandingPage.jinja  TransactionsPage.jinja  TxnPage.jinja  cards.html  cards.jinja  good.html  good.jinja  index.html  split_transactions.html  table.html  table.jinja
src/templates/Common/: Card.jinja  OrderCard.jinja  RibbonBar.jinja  TagBar.jinja  Toggle.jinja
src/vendors/: parser.py
src/vendors/eat_sure/: __init__.py  order_parser.py
src/vendors/zepto/: mapper.py  order_parser.py
src/vendors/zomato/: mapper.py  order_parser.py
zepto_orders/: .docs
