[tool.poetry]
name = "financials"
version = "0.1.0"
description = ""
authors = ["Abhishek Saxena <as7122000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
colorlog = "^6.8.2"
xlrd = "^2.0.1"
requests = "^2.31.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
tinydb = "^4.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
